# flying-build

./: .gitignore  docker-compose.yml  pyproject.toml
.cursor/: rules.mdc
src/: cli.py  config.py
src/apps/: __init__.py  exceptions.py  server.py
src/apps/admin/controllers/: __init__.py  user.py
src/apps/admin/schemas/: admin_user_response.py
src/apps/admin/services/: user.py
src/apps/team/: exception.py
src/apps/team/controller/: __init__.py  team.py
src/apps/team/schemas/: __init__.py  request.py  response.py
src/apps/team/services/: team.py
src/apps/user/: exceptions.py
src/apps/user/controllers/: __init__.py  user.py
src/apps/user/models/: user.py
src/apps/user/schemas/: __init__.py  response.py
src/apps/user/services/: user.py
src/constants/: __init__.py  config.py  messages.py  regex.py
src/core/: auth.py  common_helpers.py  types.py
src/core/data_encrypt/controller/: __init__.py  encrypt_decrypt.py
src/core/data_encrypt/schemas/: __init__.py
src/core/utils/: __init__.py  mixins.py  schema.py  set_cookies.py
src/migrations/: seeder.py
src/migrations/versions/: 2026-01-17-12_04.py  2026-01-17-17_36.py  2026-01-17-18_04.py  7fa41ff5d127_.py  8a00d9257281_created_team_model.py  a0074a1d96ee_upgrade_fields_in_user_table.py
src/models/: __init__.py  join_request.py  team.py  team_member.py  user.py
test/: main.py
test/base/: base_test.py
test/configuration/: config.py
test/features/authentication/: helpers.py  test_authentication.py
test/utils/: api_client.py  encryption.py  test_runner.py  test_users.py  validators.py
(+7 files in other folders)
